[gd_scene load_steps=23 format=2]

[ext_resource path="res://Allies/Sprites/Wing.png" type="Texture" id=1]
[ext_resource path="res://Allies/Wing.gd" type="Script" id=2]
[ext_resource path="res://Allies/Sprites/WingGun.png" type="Texture" id=3]
[ext_resource path="res://Controllers/CollisionBoxes/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/Shaders/flashShader.shader" type="Shader" id=5]
[ext_resource path="res://UI/AllyHealthMeter.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/HPPortraitWing.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 15 )

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=5]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleBack"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 15 ]
}

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=8]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "createDustEffect"
}, {
"args": [  ],
"method": "createDustEffect"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=11]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun/Gun:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 300, 150 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 5 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="Animation" id=14]
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5, 16 )

[node name="Wing" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -32 )
texture = ExtResource( 1 )
hframes = 16
frame = 1

[node name="Center" type="Position2D" parent="Sprite"]
position = Vector2( 0, 16 )

[node name="FloorCast" type="RayCast2D" parent="Sprite"]
position = Vector2( 5, 31 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2147483650

[node name="WaitMoveCast" type="RayCast2D" parent="Sprite"]
position = Vector2( 16, 16 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Climb = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/IdleBack = SubResource( 6 )
anims/JumpDown = SubResource( 7 )
anims/JumpUp = SubResource( 8 )
anims/Run = SubResource( 9 )
anims/Shoot = SubResource( 10 )

[node name="EventPlayer" type="AnimationPlayer" parent="."]

[node name="BlinkAnimator" type="AnimationPlayer" parent="."]
anims/Animate = SubResource( 11 )

[node name="LandEventTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="EnemyScanner" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScanner"]
position = Vector2( 0, -107 )
shape = SubResource( 12 )

[node name="Gun" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -18 )

[node name="Gun" type="Sprite" parent="Gun"]
material = SubResource( 13 )
texture = ExtResource( 3 )

[node name="Muzzle" type="Position2D" parent="Gun/Gun"]
position = Vector2( 23, -3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gun/Gun"]
anims/Fire = SubResource( 14 )

[node name="Timer" type="Timer" parent="Gun"]

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 15 )

[node name="AllyHealthMeter" parent="." instance=ExtResource( 6 )]
layer = 2

[node name="HPBar" parent="AllyHealthMeter/AllyHealthMeter" index="1"]
modulate = Color( 0, 1, 0.415686, 1 )

[node name="HPPortrait" parent="AllyHealthMeter/AllyHealthMeter" index="3"]
texture = ExtResource( 7 )

[node name="ReviveTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="animation_finished" from="EventPlayer" to="." method="_on_EventPlayer_animation_finished"]
[connection signal="timeout" from="Gun/Timer" to="." method="fire"]
[connection signal="hit" from="HurtBox" to="." method="_on_HurtBox_hit"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_ReviveTimer_timeout"]

[editable path="HurtBox"]
[editable path="AllyHealthMeter"]
